# BeeApi

./: .gitignore  Dockerfile  README.md  pyproject.toml  tasks.py
beeapi/: __main__.py  constants.py
beeapi/api/: __init__.py  __main__.py  apiconstants.py  app.py  models.py  routes.py  types.py
beeapi/cli/: __main__.py  cli.py
beeapi/core/: abcs.py  analyzers.py  apptypes.py  exceptions.py  indexing.py  logging.py  parsing.py  queryhandler.py  schemas.py  stemming.py  trie.py
beeapi/mgmt/: __main__.py  program.py  tasks.py
spec/: off_categories.tsv
tests/functional/api/: requests.py  test_requests.py
tests/functional/core/: parsing.py  test_parsing.py
tests/load/: load.py
tests/unit/core/: parsing.py  test_indexing.py  test_parsing.py  trie.py
