[tool.poetry]
name = "streetbeesassignment1"
version = "0.1.0"
description = ""
authors = ["jmalek <jan.malek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
