[tool.poetry]
name = "streetbeesassignment1"
version = "0.1.0"
description = ""
authors = ["jmalek <jan.malek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^1.6.0"
fastapi = "^0.74.0"
uvicorn = "^0.17.5"
diskcache = "^5.4.0"
pytest = "^7.0.1"
nltk = "^3.7"
httpx = {extras = ["cli"], version = "^0.22.0"}
thefuzz = {extras = ["speedup"], version = "^0.19.0"}
Whoosh = "^2.7.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
