[tool.poetry]
name = "BeeAPI"
version = "0.1.0"
description = "A CLI app & REST API for matching input natural language phrases against a stored dictionary."
authors = ["jmalek <jan.malek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^1.6.0"
fastapi = "^0.74.0"
uvicorn = "^0.17.5"
Whoosh = "^2.7.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
locust = "^2.8.2"
httpx = {extras = ["cli"], version = "^0.22.0"}

[tool.poetry.scripts]
beemgmt = 'beeapi.mgmt.program:program.run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
